# patchies

./: .cursorignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSES.md  README.md  SUPPORT.md
.claude/: settings.json
.cursor/: orca_client_implementation_status.md  orca_refactor_summary.md
.cursor/plans/: audio_system_refactoring_plan_72f683c3.plan.md  orca_node_implementation.plan.md  text_object_v2_refactor_4c696e3b.plan.md  uxn_node_implementation.plan.md  uxn_node_implementation_comparison.md  video_service_v2_migration_2785a570.plan.md
.husky/: README.md  pre-commit
docs/: HANDLE_IDS.md  TECH_DEBT.md  licenses.md  patchies-2026-wrapped.html  support.md
docs/design-docs/: behavior-examples.md  current-architecture.md  design-considerations.md  design-principles.md  glossary.md  modular-patchies-api-design.md  visual-object-headless-migration.md
docs/reflections/: 2025-01-03-convolver-auto-read.md  2025-01-03-v2-audio-node-refactor.md  2026-01-09-multi-object-handle-fix.md  2026-01-09-object-descriptions-refactor.md  2026-01-10-y-flip-consistency.md  2026-01-11-multi-line-shader-errors.md  2026-07-07-metro-edit-runtime-handoff.md
modules/uiua/: Cargo.toml  README.md
modules/uiua/src/: output.rs
ui/: .gitignore  .prettierrc  hydra-sketches.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite-plugin-glsl-modules.ts  vite-plugin-help-patches-manifest.ts  vite-plugin-minify-except-shader-park.ts  vite-plugin-object-schemas.ts  vite-plugin-topic-titles-manifest.ts  vite.config.embed.ts  vite.config.ts  wrangler.jsonc
(+3081 files in other folders)
